# agent-saas

./: .gitignore  README.md
instance-worker/: Dockerfile  README.md  package-lock.json  package.json  runner.go  worker.js  wrangler.jsonc
instance-worker/gateway_web/: pyproject.toml
instance-worker/gateway_web/picohost_gateway/: __init__.py  main.py  web_channel.py
instance-worker/lib/: agent.js  constants.js  container.js  health.js  helpers.js  index.js  keepalive.js  logs.js  persist.js  proxy.js  set-config.js  start.js  state.js  stop.js  workspace.js
src/: README.md  auth.d.ts  env.d.ts  nuxt.config.ts  package-lock.json  package.json  worker-configuration.d.ts  wrangler.json
src/app/: app.vue
src/app/components/: ConfigEditor.vue  ConfigEditorField.vue  ConfigEditorSection.vue  InstanceOfflinePrompt.vue  InstanceStatusBar.vue  ManageChat.vue  ManageOverview.vue  ManageSettings.vue  ManageWorkspace.vue  PageHeader.vue  PageLayout.vue
src/app/composables/: useInstanceState.ts  useIsAdmin.ts  useUserEmail.ts
src/app/layouts/: blank.vue  default.vue
src/app/middleware/: auth.global.ts
src/app/pages/: account.vue  admin.vue  index.vue  login.vue  manage.vue  welcome.vue
src/app/utils/: config-editor.ts  config-options.ts  format.ts
src/migrations/: 0000_initial.sql  0001_instance_state.sql  0002_demo_user.sql  0003_instance_configs.sql  0004_drop_instance_state.sql  0005_instance_configs_email.sql  0006_drop_unused_tables.sql  0007_instance_runtime_events.sql
src/server/utils/: admin.ts  db.ts  defaultConfig.ts  env.ts  instanceConfig.ts  (+2 more)
(+22 files in other folders)
